AC_INIT([xdp-dyplo-app], [0.1], [Topic Embedded Products])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([-Wall foreign])
AC_PROG_CXX
AC_LANG([C++])
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AC_PROG_LIBTOOL
PKG_CHECK_MODULES([DYPLO], [dyplo])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
